<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- main view -->
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus" translatable="false">-</string>
    <string name="initial_quantity" translatable="false">1</string>
    <string name="plus" translatable="false">+</string>
    <string name="order">Order</string>
    <!-- order summary -->
    <string name="os_client_name">Name: <xliff:g id = 'name' example = 'Amy'>%s</xliff:g></string>
    <string name="os_add_whipped_cream">Add whipped cream? <xliff:g id = 'add_whipped_cream' example = 'true'>%s</xliff:g></string>
    <string name="os_add_chocolate">Add chocolate? <xliff:g id = 'add_chocolate' example = 'true'>%s</xliff:g></string>
    <string name="os_quantity">Quantity: <xliff:g id = 'quantity' example = '1'>%s</xliff:g></string>
    <string name="os_total">Total: <xliff:g id = 'total' example = '15'>%s</xliff:g></string>
    <string name="os_thank_you">Thank you!</string>
</resources>
